--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 sfg.brewery.apihost=http://localhost:8080
 
+sfg.brewery.client.config.maxpoolconnection=100
+sfg.brewery.client.config.defaultmaxperroute=20
+sfg.brewery.client.config.connectiontimeout=3000
+sfg.brewery.client.config.sockettimeout=3000
+sfg.brewery.client.config.threadcount=4
+
 logging.level.org.apache.http=debug
